# jsx_compiler

./: Cargo.toml  README.md
jsx_macro/: Cargo.toml
jsx_macro/src/: lib.rs  parsers.rs
jsx_macro/src/parsers/: fail_at_parsing.rs  many_0_custom.rs  many_custom.rs  match_dom_element.rs  match_group.rs  match_string.rs  mod.rs  types.rs  util.rs
jsx_macro_tests/: Cargo.toml
jsx_macro_tests/failing-tests/: extra-chars.rs  extra-chars2.rs  interpolated-string.rs  non-matching-tag.rs
jsx_macro_tests/src/: lib.rs
jsx_main/: Cargo.toml
jsx_main/src/: main.rs
jsx_types/: Cargo.toml
jsx_types/src/: bare.rs  diff.rs  events.rs  lib.rs
