[package]
name = "jsx_macro"
version = "0.1.0"
authors = ["Robert <robert.balicki@gmail.com>"]

[dependencies]
jsx_types = { path = "../jsx_types" }
proc-macro2 = { path = "../proc-macro2" }
quote = { path = "../quote" }
# quote = "0.6.8"
# proc-macro2 = { version = "0.4.6", features = ["nightly"] }
nom = "4.0.0"

[lib]
proc-macro = true
