[package]
name = "jsx_types"
version = "0.1.0"
authors = ["Robert <robert.balicki@gmail.com>"]

[dependencies]
# enum_derive = "0.1.7"
# custom_derive = "0.1.7"
wasm-bindgen = { version = "0.2.24", features = ["nightly"] }
serde = "1.0.62"
serde_json = "1.0.18"
serde_derive = "1.0.62"
take_mut = "0.2.2"
web-sys = { version = "0.3.1", features = [
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "HtmlElement",
  "HtmlTemplateElement",
  "Event",
  "UiEvent",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "EventTarget",
  "Node",
  "NodeList"
] }
